# wm-curator

./: .gitattributes  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile.ci  MANIFEST.in  README.md  devset.sh  pixi.toml  pyproject.toml  pytest.ini  setup.py
.gitlab/scripts/: build_xenna_wheel.sh  install_local_xenna_into_pixi.sh  install_local_xenna_wheel_if_present.sh  nvcf_split_benchmark.sh  run_env_tests.sh
.gitlab/vault/: vault-auth.sh
benchmarks/: summary.py
benchmarks/split_pipeline/: nvcf_split_benchmark.py
cosmos_curator/: __init__.py
cosmos_curator/client/: cli.py
cosmos_curator/client/image_cli/: image_app.py
cosmos_curator/client/local_cli/: launch_local.py
cosmos_curator/client/pipeline_cli/: __init__.py  pipeline_app.py  pipeline_runtime.py
cosmos_curator/client/slurm_cli/: sbatch.sh.j2  slurm.py  slurm_local.py
cosmos_curator/client/utils/: conda_envs.py  docker_utils.py
cosmos_curator/configs/: all_models.json
cosmos_curator/core/cf/: nvcf_main.py
cosmos_curator/core/interfaces/: runner_interface.py
cosmos_curator/core/managers/: model_cli.py
cosmos_curator/core/sensors/data/: camera_data.py
cosmos_curator/core/sensors/sensors/: camera_sensor.py
cosmos_curator/core/sensors/utils/: video.py
cosmos_curator/core/utils/: ffmpeg_utils.py
cosmos_curator/core/utils/infra/: hardware_info.py  tracing_hook.py
cosmos_curator/core/utils/misc/: stage_compare.py  stage_replay.py
cosmos_curator/core/utils/storage/: presigned_s3_zip.py
cosmos_curator/models/: aesthetics.py  chat_lm.py  clip.py  clip_aesthetics.py  normalcrafter.py  paddle_ocr.py  prompts.py  qwen_vl.py  sam3.py  t5_encoder.py  transnetv2.py  vipe.py  vllm_cosmos3_omni.py  vllm_cosmos_reason1_vl.py  vllm_cosmos_reason2_vl.py  vllm_interface.py  vllm_model_ids.py  vllm_nemotron.py  vllm_plugin.py  vllm_qwen.py
cosmos_curator/models/_normalcrafter/: LICENSE  PROVENANCE.md  __init__.py  unet.py
cosmos_curator/pipelines/av/: av_video_splitting_pipeline.py
cosmos_curator/pipelines/av/captioning/: captioning_stages.py
cosmos_curator/pipelines/av/downloaders/: download_stages.py
cosmos_curator/pipelines/av/writers/: cosmos_predict2_writer_stage.py
cosmos_curator/pipelines/common/: model_constraints.py  openai_embedding_utils.py
cosmos_curator/pipelines/examples/: sam3_event_pipeline.py
cosmos_curator/pipelines/image/: annotate_pipeline.py  run_pipeline.py
cosmos_curator/pipelines/image/captioning/: captioning_builders.py  image_api_caption_stages.py  image_vllm_stages.py
cosmos_curator/pipelines/image/embedding/: image_embedding_stages.py
cosmos_curator/pipelines/ray_data/: _vllm_caption.py  splitting_pipeline.py  video_split_config.py
cosmos_curator/pipelines/video/: splitting_pipeline.py
cosmos_curator/pipelines/video/annotation/: __init__.py  adapters.py  artifact_writer.py  data_model.py  decode_grid.py  normalcrafter_stage.py  vipe_stage.py
cosmos_curator/pipelines/video/captioning/: caption_quality_flags.py  captioning_builders.py  gemini_caption_stage.py  openai_caption_stage.py  per_event_caption_stage.py  per_event_cli_args.py  per_event_inner_builder.py  single_inference.py  vllm_async_config.py  vllm_async_stage.py  vllm_caption_stage.py
cosmos_curator/pipelines/video/clipping/: clip_extraction_stages.py  clip_frame_extraction_stages.py  clipping_builders.py  frame_extraction_stages.py
cosmos_curator/pipelines/video/embedding/: openai_embedding_stage.py
cosmos_curator/pipelines/video/output_comparison/: caption_comparator.py  cli.py  compare_features.py  comparison.py  feature_plan.py  score_comparator.py  video_artifacts.py
cosmos_curator/pipelines/video/read_write/: metadata_writer_stage.py  read_write_builders.py  summary_writers.py
cosmos_curator/pipelines/video/split_comparison/: field_spec.py  measurement_model.py
cosmos_curator/pipelines/video/tracking/: cli_args.py  sam3_bbox_stage.py  tracking_builders.py  visualization.py
cosmos_curator/pipelines/video/utils/: data_model.py  decoder_utils.py  nvcodec_utils.py  vision_process.py  windowing_utils.py
docs/: developer-guide.md
docs/client/: end-user-guide.md
docs/curator/: README.md
docs/curator/design/: captioning-approaches.md  deprecation.md  orca.md  pipeline-configs.md  ray-data.md  sensor-library-cloud-storage.md  slim-image.md  split-comparison.md  split-output-comparison.md  vllm-interface.md
docs/curator/guides/: annotation-pipeline.md  pipeline-design.md  slurm-interactive.md  stage-replay.md  vllm-async-captioning.md  vllm-interface-plugin.md
docs/curator/reference/: architecture.md  image-pipeline.md  split-pipeline-stages.md  video-pipelines.md
examples/nvcf/function/: invoke_image_annotate.json  invoke_video_split_full.json
examples/workflow/: template_invoke_video_split.json
package/cosmos_curator/: default.dockerfile.jinja2
tests/: test_pixi_config.py  test_pixi_dev_commands.py
tests/benchmarks/: test_summary.py
tests/benchmarks/split_pipeline/: test_nvcf_split_benchmark.py
tests/cosmos_curator/: test_no_future_annotations.py
tests/cosmos_curator/client/pipeline_cli/: test_pipeline_app.py  test_pipeline_runtime.py
tests/cosmos_curator/client/slurm_cli/: test_slurm.py  test_slurm_local.py
tests/cosmos_curator/client/utils/: test_docker_utils.py
tests/cosmos_curator/core/cf/: test_nvcf_main.py
tests/cosmos_curator/core/managers/: test_model_cli.py
tests/cosmos_curator/core/utils/: test_ffmpeg_utils.py  test_pixi_runtime_envs.py
tests/cosmos_curator/models/: test_normalcrafter.py  test_vipe.py  test_vllm_cosmos_reason1_vl.py  test_vllm_interface.py  test_vllm_model_ids.py  test_vllm_nemotron.py  test_vllm_plugins_model_async.py  test_vllm_qwen.py
tests/cosmos_curator/pipelines/image/: test_annotate_pipeline.py  test_run_pipeline.py
tests/cosmos_curator/pipelines/ray_data/: test_splitting_pipeline.py  test_video_split_config.py  test_vllm_caption.py
tests/cosmos_curator/pipelines/video/: test_captioning_phase.py  test_splitting_pipeline_cli.py  (+1 more)
tools/: sam3_bbox_demo.py
(+47 files in other folders)
