# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "cosmos_curator"
version = "2.0.0"
description = "Cosmos Curator"
readme = "README.md"
authors = [
    {name = "NVIDIA Corporation"},
]
license = "Apache-2.0"
license-files = ["LICENSE"]
# For image builds, pixi explicitly requests 3.12.13 to avoid bundling CVEs
# For local development, accept what is still usable
requires-python = ">=3.12,<3.13"
dependencies = [
    "attrs",
    "click<8.3.0",
    "fabric>=3.2.2,<4.0.0",
    "huggingface_hub",
    "jinja2",
    "loguru",
    "mcap (>=1.3.1,<2.0.0)",
    "multidict>=6.6.3,<7",
    "ngcsdk",
    "pyopenssl",
    "pyyaml>=6.0.2,<7",
    "ray[default,data]==2.55.1",
    "requests>=2.32.3,<3",
    "rich>=14.0.0,<16",
    "tomli>=2.2.1",
    "tqdm>=4.67.1,<5",
    "typer>=0.21.0",
    "urllib3>=1.26.18,<3"
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Homepage = "https://github.com/nvidia-cosmos/cosmos-curate"
Repository = "https://github.com/nvidia-cosmos/cosmos-curate.git"

[tool.poetry.scripts]
cosmos-curator = 'cosmos_curator.client.cli:cosmos_curator'

[project.scripts]
cosmos-curator = 'cosmos_curator.client.cli:cosmos_curator'

[build-system]
requires = ["setuptools==80.7.1", "jinja2>=3.1.6", "tomli>=2.2.1", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
local = [
    "aiofiles",
    "astral",
    "attrs",
    "av==17.0.0",  # 17.0.1 deadlocks in CodecContext.__dealloc__ during multi-threaded decode; unpin once PyAV releases a fix
    "awscli",
    "awscli_plugin_endpoint",
    "azure-identity==1.22.0",
    "azure-storage-blob==12.26.0b1",
    "boto3",
    "cattrs",
    "click<8.3.0",
    "easydict",
    "fastapi",
    "gpustat",
    "google-genai>=1.48.0",
    "huggingface_hub",
    "jinja2",
    "kubernetes>=28.0",
    "loguru",
    "ngcsdk",
    "numpy>2,<2.3",  # opencv-python-headless requires >=2; numba 0.61.x requires <2.3
    "nvtx==0.2.11",
    "openai",
    "opencv-python-headless",
    "pandas>=3,<3.1",
    "Pillow>=12.2.0",  # CVE-2026-40192: patched in 12.2.0+
    "prometheus_client==0.21.1",
    "psutil==7.0.0",
    "psycopg2-binary",
    "pyarrow",
    "pylance>=0.39.0",
    "nvidia-ml-py",
    "pyproj",
    "requests==2.32.3",
    "rich==14.0.0",
    "scikit-image",
    "scipy",
    "setuptools==80.7.1",
    "sqlalchemy",
    "tabulate",
    "tenacity",
    "timezonefinder",
    "toml",
    "torch",
    "torchvision",
    "tqdm==4.67.1",
    "transformers<5.0",
    "typer[all]>=0.21.0",
    "uvicorn",
    "webdataset==0.2.111",
    "fabric (>=3.2.2,<4.0.0)",
    "cosmos-xenna==0.4.2",
]

[tool.setuptools.package-data]
# Ship non-Python data files inside the wheel. Needed so that runtime
# ``importlib.resources`` lookups (e.g. prompt templates used by
# ``PerEventCaptionStage``) keep working when the package is installed from a
# built wheel rather than from the source tree.
"cosmos_curator" = [
    "pipelines/video/captioning/prompts/*.md",
    "configs/*.json",
    "models/configs/*.json",
]
"cosmos_curator.client.view_cli" = [
    "clip_viewer_webdocs/*",
    "clip_viewer_webdocs/images/*",
]

[tool.coverage.run]
omit = [
    "tests/*",
]

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4
exclude = [
    "build/",
    "dist/",
    "cosmos-xenna/",
    "cosmos_curator/models/internvideo2_multi_modality/",
]

[tool.ruff.lint]
# Do not add more, help to reduce
# Ignore FIX002 Line contains TODO and related TD002, TD003
# Later C901, PLR0912, PLR0913, PLR0915
ignore = ["D203", "D213", "FIX002", "S101", "TD002", "TD003", "N806",
          "COM812", "TRY003", "RUF200", "TC001", "PLE1205"]
select = ["ALL"]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["INP001", "SLF001", "PLR2004"]
"cosmos_curator/pipelines/video/super_resolution/inference_seedvr2_window.py" = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["cosmos_curator", "cosmos_xenna"]

[tool.mypy]
allow_redefinition = false
allow_untyped_globals = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
strict_optional = true
python_version = '3.12'
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = false
disable_error_code = ["override"]
files = ["cosmos_curator"]
exclude = [
    "build/",
    "dist/",
    "cosmos-xenna/",
    "cosmos_curator/core/managers/postgres_cli.py",
    "cosmos_curator/models/internvideo2_multi_modality/",
    "cosmos_curator/pipelines/video/super_resolution/inference_seedvr2_window.py",
    "cosmos_curator/pipelines/video/utils/vision_process.py",
    "cosmos_curator/pipelines/video/utils/nvcodec_utils.py",
]

[[tool.mypy.overrides]]
module = [
    "cosmos_curator.models.internvideo2_multi_modality.*",
    "cosmos_curator.pipelines.video.super_resolution.inference_seedvr2_window",
    "cosmos_curator.pipelines.video.utils.*",
    "cudf.*",
    "cuml.*",
    "cupy.*",
    "pylibraft.*",
    "raft_dask.*",
]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "lance",
    "lance.fragment",
    "ngcbase.errors",
    "ngcsdk",
    "registry.api.image",
    "registry.api.models",
    "vllm",
    "vllm.*",
]
ignore_missing_imports = true

[tool.poetry.group.dev.dependencies]
mypy = "2.1.0"
pandas-stubs = "*"
pre-commit = "4.2.0"
pyinstrument = "*"
memray = "*"
opentelemetry-api = "*"
opentelemetry-sdk = "*"
opentelemetry-exporter-otlp-proto-http = "*"
opentelemetry-instrumentation-botocore = "*"
opentelemetry-instrumentation-requests = "*"
opentelemetry-instrumentation-urllib3 = "*"
opentelemetry-instrumentation-threading = "*"
opentelemetry-instrumentation-logging = "*"
opentelemetry-instrumentation-sqlalchemy = "*"
opentelemetry-instrumentation-fastapi = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-dependency = "*"
pytest-mock = "*"
pytest-order = "*"
pytest-xdist = "*"
ruff = "0.15.15"
types-aiofiles = "*"
types-awscrt = "*"
types-beautifulsoup4 = "*"
types-boto3 = "*"
types-cachetools = "*"
types-colorama = "*"
types-greenlet = "*"
types-jmespath = "*"
types-jsonschema = "*"
types-networkx = "*"
types-openpyxl = "*"
types-protobuf = "*"
types-psutil = "*"
types-psycopg2 = "*"
types-pycurl = "*"
types-python-dateutil = "*"
types-pytz = "*"
types-pyyaml = "*"
types-PyYAML = "*"
types-requests = "*"
types-setuptools = "*"
types-s3transfer = "*"
types-simplejson = "*"
types-six = "*"
types-regex = "*"
types-tabulate = "*"
types-tensorflow = "*"
types-toml = "*"
types-tqdm = "*"
